# VPN_From_Scratch_CPP

./: CMakeCache.txt  VPN_From_Scratch.sln  config.cpp  readme.md  utils.cpp
Authentication/: Authentication.cpp
Encryption/: Encryption.cpp
Include/: Authentication.hpp  Config.hpp  Encryption.hpp  KeyExchange.hpp  NetworkInterface.hpp  SessionManager.hpp  Tunneling.hpp  Utils.hpp  VPNClient.hpp  VPNServer.hpp  vpn_client.hpp
NetworkInterfacing/: NetworkInterface.cpp
NetworkInterfacing/tests/: build.bat  routing.cpp  run_as_admin.bat  tun.cpp  vni.test.cpp
SSHKeyExchange/: KeyExchange.cpp
SetupTunDevice/: tun_interface.cpp  tun_interface.h
SetupTunDevice/tests/: tun.test.cpp
Testing/: VNIc.test.cpp  packet_forwarding_test.cpp  playwithpackets.cpp  server.test.cpp  tap.test.cpp  tun.test.cpp  vpnclient.test.cpp
Testing/Tun/: TunBuild.bat  (+3 more)
Tunneling/: Tunneling.cpp
VPNCLient/: vpn_client.cpp
VPNServer/: CMakeLists.txt  vpn_server.cpp
VPN_From_Scratch/: VPN_From_Scratch.vcxproj
src/: main.cpp
tests/: CMakeLists.txt  README.md  build.bat  build_client.bat  build_server.bat  check_tap.ps1  client.c  client.test.cpp  configure_tap.bat  get_npcap.ps1  get_tap_details.ps1  get_windivert.ps1  install_tap.ps1  main.cpp  networkIntecept.test.cpp  network_interface.cpp  packet_capture.cpp  packet_interceptor.cpp  packet_stealer.cpp  playwithpackets.cpp  server.c  server.test  setup_windivert.bat  tun_interface.cpp  vpnserver.test.cpp  web_stealer.cpp
tests/certs/: ca-cert.pem  ca-key.pem  client-cert.pem  client-key.pem  server-cert.pem  server-key.pem
(+2 files in other folders)
